# cli-pytest-async-lab

./: LICENSE  do_stuff.py  do_stuff_async.py  pyproject.toml
tests/: conftest.py  test_do_stuff.py  test_do_stuff_async.py
